--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 	<div id="wrapper">
-		<div id="box">
+		<!-- <div id="box">
 			JS
-		</div>
+		</div> -->
 	</div>
-	<script src="/index.js"></script>
+	<script src="index.js"></script>
 </body>
 </html>
